// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Fields/Switch Default smoke-test 1`] = `
<div class="flex items-center space-x-2">
  <button type="button"
          role="switch"
          aria-checked="false"
          data-state="unchecked"
          value="on"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          id="default-switch"
  >
    <span data-state="unchecked"
          class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
    >
    </span>
  </button>
  <label for="default-switch"
         class="peer-disabled:text-foreground/50"
  >
    Airplane Mode
  </label>
</div>
`;

exports[`Design System/Fields/Switch Disabled smoke-test 1`] = `
<div class="flex items-center space-x-2">
  <button type="button"
          role="switch"
          aria-checked="false"
          data-state="unchecked"
          data-disabled
          disabled
          value="on"
          class="peer inline-flex h-5 w-9 shrink-0 cursor-pointer items-center rounded-full border-2 border-transparent shadow-sm transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=unchecked]:bg-input"
          id="disabled-switch"
  >
    <span data-state="unchecked"
          data-disabled
          class="pointer-events-none block h-4 w-4 rounded-full bg-background shadow-lg ring-0 transition-transform data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
    >
    </span>
  </button>
  <label for="disabled-switch"
         class="peer-disabled:text-foreground/50"
  >
    Airplane Mode
  </label>
</div>
`;
